--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-ckfinder": "^29.0.0",
     "@craco/craco": "^6.1.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@schettnet/bridge": "^1.0.2",
     "@snek-at/jaen": "^1.2.0",
+    "@types/ckeditor__ckeditor5-ckfinder": "^27.1.1",
     "gh-pages": "^3.2.3",
     "mapbox-gl": "^2.3.1",
     "mdb-react-ui-kit": "^1.1.0",
